feat: add school district editing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -172,6 +172,10 @@
   }
 }
 
+.tiptap {
+  @apply break-all;
+}
+
 .tiptap .is-editor-empty:first-child::before {
   height: 0;
   color: var(--muted-foreground);
